-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 20, 21
-
Component/s: hotspot
-
b02
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8317645 | 17.0.10 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
Count deltas in diff reports (number of things, e.g. malloc blocks or class count) are shown as signed int, restricting them to +-2g.
- backported by
-
JDK-8317645 NMT: count deltas are printed with 32-bit signed size
-
- Resolved
-