8298298: NMT: count deltas are printed with 32-bit signed size

Reviewed-by: lucy, stuefe
Backport-of: f729f5b6d01b0d3a0ee21f50199ca30935c8237a